--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "luckyvn-mineflayer",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js", 
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
